[package]
name = "sundial-gc"
version = "0.1.0"
authors = ["host"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
lazy_static = "1.4.0"
smallvec = "1"
rustc-hash = "1.1.0"
sundial-gc-derive = { path = "../sundial-gc-derive" }

[dev-dependencies]
env_logger = "0.7.1"
criterion = "0.3"
quickcheck = "0.9.2"

[[bench]]
name = "hamt_benchmark"
harness = false

[[bench]]
name = "usize_benchmark"
harness = false
